background modal certificate fixed on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ body {
   left: 0%;
 
   background-color: rgb(51, 51, 51, 0.6);
+  background-repeat: no-repeat;
+  background-position: center;
   z-index: 110;
 
   transition: 0.8s ease;
@@ -54,5 +56,9 @@ body {
     padding-left: 20px;
     padding-right: 20px;
     min-width: 300px;
+  }
+
+  .modal {
+    background-size: contain;
   }
 }
